# CCProject

./: .gitignore  README.md  github_actions_ci.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml  publish.yml  release.yml  scripts.yml  test.yml
ci_cd_tool/config/: config_manager.py
docs/: PROJECT_GOALS.md  test_environment.md  usage.md  기능명세서.docx  명령어목록1.md  전체적인흐름1.md  전체적인흐름3.md
scripts/: deploy.sh  publish.sh  upload_to_pypi.sh
src/ci_cd_tool/: cli.py
src/ci_cd_tool.egg-info/: PKG-INFO  SOURCES.txt
src/ci_cd_tool/analyzer/: project_analyzer.py
src/ci_cd_tool/ci/: base_ci.py  git_setting.py  github_actions.py  template_manager.py
src/ci_cd_tool/ci_cd_tool.egg-info/: PKG-INFO
src/ci_cd_tool/commands/: __init__.py  base.py  cd_commands.py  ci_commands.py  init_commands.py  test_commands.py
src/ci_cd_tool/commands/cd/: __init__.py  deploy.py  init.py  list.py  push.py  rollback.py  status.py
src/ci_cd_tool/commands/ci/: __init__.py  build.py  status.py  test.py
src/ci_cd_tool/commands/config/: __init__.py  get.py  init.py  set.py  show.py
src/ci_cd_tool/config/: __init__.py  config.py  config.yml  config_manager.py  config_test.yml  manager.py
src/ci_cd_tool/core/: aws_credentials.py  base_service.py  cd.py  config.py  container.py  exceptions.py  factory.py  logging.py
src/ci_cd_tool/models/: pipeline_status.py  test_config.py
src/ci_cd_tool/services/: __init__.py  base_service.py  build_service.py  cd_service.py  ci_service.py  deploy_service.py  github_actions_service.py  github_service.py  initialization_service.py  question_service.py  status_service.py  test_manager.py  test_service.py
src/ci_cd_tool/utils/: test_utils.py
test-project/: calculator.py  test_calculator.py
tests/: conftest.py
tests/cd/: test_aws_deploy.py  test_cd_commands.py
tests/ci/: test_ci_commands.py  test_github_actions.py
tests/commands/: test_base_command.py
tests/commands/cd/: test_deploy_command.py
tests/commands/ci/: test_test.py
tests/commands/test/: test_run_command.py
tests/config/: test_config_commands.py
tests/init/: test_init_commands.py
(+12 files in other folders)
