[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ci_cd_tool"
version = "0.2.6"
description = "CI/CD 자동화 도구"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "dependency-injector>=4.41.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ci_cd_tool"]

[project.scripts]
cc = "ci_cd_tool.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3